--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lucide-react": "^0.284.0",
     "next": "13.5.4",
     "react": "^18",
+    "react-compare-slider": "^3.0.1",
     "react-dom": "^18",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
