--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@gsap/react": "^2.1.2",
 		"@hookform/resolvers": "^3.3.2",
+		"@radix-ui/react-accordion": "^1.1.2",
 		"@radix-ui/react-avatar": "^1.0.4",
+		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-slider": "^1.1.2",
@@ -20,6 +23,7 @@
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
 		"cmdk": "^0.2.0",
+		"gsap": "^3.13.0",
 		"lucide-react": "^0.284.0",
 		"next": "13.5.4",
 		"react": "^18",
